--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,6 @@
     "autoload": {
         "psr-4": {"vitalis\\HelloWorld\\": "src/"}
     },
-    "require": {}
+    "require": {
+        "matomo-org/jshrink": "1.3.1@dev"
 }
