--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,10 @@
 {
     "name": "matomo-org/jshrink",
     "description": "anishacks - PoC",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "anishacks",
-            "email": "mail@anishacks.in"
-        }
-    ],
-    "minimum-stability": "stable",
-    "autoload": {
-        "psr-4": {"vitalis\\HelloWorld\\": "src/"}
-    },
+    "type": "project",
     "require": {
-        "matomo-org/jshrink": "1.3.1@dev"
+        "matomo-org/jshrink": "1.3.1"
+    },
+    "license": "MIT",
+    "minimum-stability": "stable"
 }
