--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "matomo-org/jshrink",
+    "name": " ",
     "description": "anishacks - PoC",
     "license": "MIT",
     "minimum-stability": "stable"
